# FemSolver

./: Cmakelists.txt  IntegrationMatrix.cpp  vFESolver.hpp
Math/: Matrix.hpp  Solver.cpp
cudaCore/: BICGSTAB.cuh  BiCGSTAB.cu  CG.cu  CG.cuh  CMakeLists.txt
